--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,4 @@ jobs:
         message: "ref prices fetching"
         add: "ref-prices.json"
         push: true
+        token: ${{ secrets.GITHUB_TOKEN }}
