--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,9 @@ jobs:
       run: cargo run
 
     - name: Commit changes
-      uses: endbug/add-and-commit@v9
+      uses: EndBug/add-and-commit@v9
       with:
         author_name: "GManTheMarioGuy"
         author_email: "gman36147@gmail.com"
         message: "ref prices fetching"
-        add: "ref-prices.json"
-        push: true
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        add: "ref-prices.json --force"
