--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Rust 1.85.1
-      uses: actions/setup-rust@v1
+      uses: actions-rust/setup-rust-toolchain@v1
       with:
-        rust-version: '1.85.1'
+        toolchain: '1.85.1'
 
     - name: Cache cargo dependencies
       uses: actions/cache@v3
