--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Rust 1.85.1
-      uses: actions-rust/setup-rust-toolchain@v1
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: '1.85.1'
 
