--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,14 @@ name: Test
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - '**/*.rs'
+      - '.github/workflows/test.yml'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '**/*.rs'
+      - '.github/workflows/test.yml'
   schedule:
     - cron: "*/15 * * * *"
   workflow_dispatch:
