--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-    - name: Set up Rust 1.85.1
+    - name: Set up Rust
       uses: actions-rs/toolchain@v1
       with:
         toolchain: '1.85.1'
+        default: true
 
     - name: Cache cargo dependencies
       uses: actions/cache@v3
@@ -47,6 +51,9 @@ jobs:
     - name: Run application
       run: cargo run
 
+    - name: Debug File Changes
+      run: git status
+
     - name: Commit changes
       uses: endbug/add-and-commit@v9
       with:
@@ -55,4 +62,4 @@ jobs:
         message: "ref prices fetching"
         add: "ref-prices.json"
         push: true
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
