--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,16 +23,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+    - uses: actions/checkout@v4
 
-    - name: Set up Rust
+    - name: Set up Rust 1.85.1
       uses: actions-rs/toolchain@v1
       with:
         toolchain: '1.85.1'
-        default: true
 
     - name: Cache cargo dependencies
       uses: actions/cache@v3
@@ -51,9 +47,6 @@ jobs:
     - name: Run application
       run: cargo run
 
-    - name: Debug File Changes
-      run: git status
-
     - name: Commit changes
       uses: endbug/add-and-commit@v9
       with:
@@ -62,4 +55,4 @@ jobs:
         message: "ref prices fetching"
         add: "ref-prices.json"
         push: true
-        token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
