--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -15,6 +15,9 @@ on:
     - cron: "*/15 * * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,10 +48,11 @@ jobs:
       run: cargo run > ref-prices.json
 
     - name: Commit changes
-      uses: EndBug/add-and-commit@v9
+      uses: endbug/add-and-commit@v9
       with:
         author_name: "GManTheMarioGuy"
         author_email: "gman36147@gmail.com"
-        add: "ref-prices.json --force"
         message: "ref prices fetching"
+        add: "ref-prices.json"
+        push: true
         github_token: ${{ secrets.GITHUB_TOKEN }}
