--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,58 +1,26 @@
 name: Fetch
 
 on:
-  push:
-    branches: [ "main" ]
-    paths:
-      - 'src/main.rs'
-      - '.github/workflows/fetch.yml'
-  pull_request:
-    branches: [ "main" ]
-    paths:
-      - 'src/main.rs'
-      - '.github/workflows/fetch.yml'
+  workflow_dispatch:
   schedule:
     - cron: "*/15 * * * *"
-  workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
-  build:
+  updateStats:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-    - name: Set up Rust 1.85.1
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: '1.85.1'
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: '1.85.1'
 
-    - name: Cache cargo dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-
+      - run: |
+          cargo run --release > ref-prices.json
 
-    - name: Build
-      run: cargo build --verbose
-
-    - name: Run application
-      run: cargo run > ref-prices.json
-
-    - name: Commit changes
-      uses: endbug/add-and-commit@v9
-      with:
-        author_name: "GManTheMarioGuy"
-        author_email: "gman36147@gmail.com"
-        message: "ref prices fetching"
-        add: "ref-prices.json"
-        push: true
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: EndBug/add-and-commit@v9
+        with:
+          author_name: "REF Prices Updater"
+          author_email: "gman36147@gmail.com"
+          add: "ref-prices.json --force"
+          message: "ref prices fetching"
