--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: '1.85.1'
 
