--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -24,11 +24,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Set up Rust
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        toolchain: '1.85.1'
+    - uses: dtolnay/rust-toolchain@1.85.1
 
     - name: Cache dependencies
       uses: actions/cache@v3
